[fix] 추가 개선사항 적용 (#61)
* [fix] #60 add *.json in gitignore

* [fix] #60 disunite IsMember by param type

* [fix] #60 use appropriate method to return empty List

* [fix] #60 change query to single String

* [fix] #60 manage String as Constant & rename Constant

* [fix] #60 use fetch join in query

* [fix] #60 use BatchSize in OneToMany

* [chore] #60 add servlet path in yml

* [fix] #60 rm requestMapping & change versioning level to method level

* [fix] #60 rm unintended class