@@ -14,11 +14,15 @@ import org.springframework.web.client.RestClient;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import java.net.URI;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 public class NaverService {
+
+    private final String NAVER_CLIENT_ID = "X-Naver-Client-Id";
+    private final String NAVER_CLIENT_SECRET = "X-Naver-Client-Secret";
 
     @Value("${naver.client-id}")
     private String naverClientId;
@@ -35,7 +39,7 @@ public class NaverService {
             NaverLocationResponse naverLocationResponse = locationSearch(requestMap(query));
             return convertResponse(naverLocationResponse);
         } catch (OpenApiException e) {
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
@@ -44,8 +48,8 @@ public class NaverService {
         URI uri = createUri(request);
         return restClient.get()
                 .uri(uri)
-                .header("X-Naver-Client-Id", naverClientId)
-                .header("X-Naver-Client-Secret", naverClientSecret)
+                .header(NAVER_CLIENT_ID, naverClientId)
+                .header(NAVER_CLIENT_SECRET, naverClientSecret)
                 .retrieve()
                 .onStatus(HttpStatusCode::is4xxClientError, (req, res) -> {
                     throw new OpenApiException(OpenApiErrorCode.INVALID_ARGUMENT);
